Fix js frameshift

--- a/resources/css/frameshift.css
+++ b/resources/css/frameshift.css
@@ -60,6 +60,7 @@
     /* Показываем боковой текст на больших экранах */
     .side-text {
         display: block !important;
+        font-weight: bold;
     }
 }
 
@@ -234,11 +235,16 @@
 }
 
 .main-title {
+    color: rgba(50, 50, 50, 0.59);
     font-size: var(--main-title-size-t1);
     letter-spacing: var(--main-title-spacing-t1);
     font-weight: bold;
     margin-bottom: 2px;
-    text-shadow: 0 0 10px rgba(255, 157, 0, 0.5);
+    /*text-shadow: 0 0 10px rgba(255, 157, 0, 0.5);*/
+}
+.main-title-active {
+    text-shadow: 0 0 10px rgba(255, 157, 0, 0.4);
+    color: rgba(255, 255, 255, 0.68);
 }
 
 .sub-title {
@@ -273,13 +279,12 @@
     background: var(--primary-color-t1);
 }
 .progress-fill-active {
-    animation: load 2s infinite ease-in-out;
+    animation: load 1.2s 1 linear forwards;
 }
 
 @keyframes load {
-    0% { width: 10%; left: 0; }
-    50% { width: 80%; left: 10%; }
-    100% { width: 10%; left: 90%; }
+    0% { width: 0%; left: 0; }
+    100% { width: 100%; left: 0%; }
 }
 
 .bottom-circles {
